# apps/backend/src/modules/user/dto/index.ts
@@ -13,6 +13,7 @@ export const userDtoSchema = z
     id: z.cuid2(),
     osuId: z.number().describe('The osu! user ID'),
     osuUsername: z.string().describe('The osu! username'),
+    countryCode: z.string().nullable(),
     defaultMode: tournamentModeSchema.describe('The default osu! game mode'),
     role: userRoleSchema.describe('The user role'),
     createdAt: userDateSchema.describe('The user creation date'),
@@ -22,6 +23,7 @@ export const userDtoSchema = z
     id: u.id,
     osuId: u.osuId,
     osuUsername: u.osuUsername,
+    countryCode: u.countryCode,
     defaultMode: u.defaultMode,
     role: u.role,
     avatarUrl: `https://a.ppy.sh/${u.osuId}`,
